src/objects/UGI_Risk__c.object
<CustomObject>
    <fields>
        <fullName>Accounts_receivable_net_APU__c</fullName>
        <label>Accounts receivable, net - APU</label>
        <picklist>
            <picklistValues>
                <fullName>HIGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accounts_receivable_net_ES__c</fullName>
        <label>Accounts receivable, net-ES</label>
        <picklist>
            <picklistValues>
                <fullName>HIGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accounts_receivable_related_parties__c</fullName>
        <label>Accounts receivable- related parties</label>
        <picklist>
            <picklistValues>
                <fullName>HIGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accrued_utility_revenues_ES__c</fullName>
        <label>Accrued utility revenues-ES</label>
        <picklist>
            <picklistValues>
                <fullName>HIGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AmeriGas__c</fullName>
        <formula>IF(INCLUDES( Subsidiary__c ,&quot;AmeriGas&quot;), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AmeriGas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Antargaz_Finagaz__c</fullName>
        <formula>IF(INCLUDES( Subsidiary__c , &quot;Antargaz / Finagaz&quot;), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Antargaz / Finagaz</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvantiGas__c</fullName>
        <formula>IF(INCLUDES( Subsidiary__c, &quot;AvantiGas&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AvantiGas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_and_cash_equivalents_APU__c</fullName>
        <label>Cash and cash equivalents-APU</label>
        <picklist>
            <picklistValues>
                <fullName>HIGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_and_cash_equivalents_ES__c</fullName>
        <label>Cash and cash equivalents-ES</label>
        <picklist>
            <picklistValues>
                <fullName>HIGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>130768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Control_Effectiveness_Level__c</fullName>
        <label>Control Effectiveness Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Impact_Level__c</fullName>
        <label>Current Impact Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Likelihood_Level__c</fullName>
        <label>Current Likelihood Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferred_income_taxes_APU__c</fullName>
        <label>Deferred income taxes-APU</label>
        <picklist>
            <picklistValues>
                <fullName>HIGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deferred_income_taxes_ES__c</fullName>
        <label>Deferred income taxes-ES</label>
        <picklist>
            <picklistValues>
                <fullName>HIGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flaga__c</fullName>
        <formula>IF(INCLUDES( Subsidiary__c, &quot;Flaga&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flaga</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventories_ES__c</fullName>
        <label>Inventories-ES</label>
        <picklist>
            <picklistValues>
                <fullName>HIGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inventories__c</fullName>
        <label>Inventories</label>
        <picklist>
            <picklistValues>
                <fullName>HIGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inventories_apu__c</fullName>
        <label>Inventories-APU</label>
        <picklist>
            <picklistValues>
                <fullName>HIGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Risk Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarterly_Review_No_Changes__c</fullName>
        <formula>HYPERLINK(&apos;/apex/UpdateQuaterlyReviewStatusUGI?id=&apos;&amp;Id+&apos;&amp;status=Reviewed but no changes&apos; , IMAGE(&apos;/servlet/servlet.FileDownload?file=015F0000004boJK&apos;,&apos;Reviewed but no changes&apos;),&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarterly Review No Changes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarterly_Review_Status_Track__c</fullName>
        <label>Quarterly Review Status Track</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quarterly_Review_Status__c</fullName>
        <label>Quarterly Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Reviewed but no changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed with changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarterly_Review_With_Changes__c</fullName>
        <formula>HYPERLINK(&apos;/apex/UpdateQuaterlyReviewStatusUGI?id=&apos;&amp;Id+&apos;&amp;status=Reviewed with changes&apos; , IMAGE(&apos;/servlet/servlet.FileDownload?file=015F0000004boJJ&apos;,&apos;Reviewed with changes&apos;),&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarterly Review With Changes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Category__c</fullName>
        <label>Risk Category</label>
        <picklist>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Risk_Source__c</fullName>
        <label>Risk Source</label>
        <picklist>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Status__c</fullName>
        <label>Risk Status</label>
        <picklist>
            <picklistValues>
                <fullName>Key risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subsidiary__c</fullName>
        <label>Subsidiary</label>
        <picklist>
            <picklistValues>
                <fullName>AmeriGas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UGI Energy Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UGI Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antargaz / Finagaz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AvantiGas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flaga</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>UGI_Energy_Services__c</fullName>
        <formula>IF(INCLUDES( Subsidiary__c ,&quot;UGI Energy Services&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UGI Energy Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UGI_Utilities__c</fullName>
        <formula>IF(INCLUDES( Subsidiary__c ,&quot;UGI Utilities&quot;), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UGI Utilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>UGI Risk</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UGI Risks</pluralLabel>
    <recordTypes>
        <fullName>Consolidated_Risk_Assessment</fullName>
        <active>true</active>
        <label>Consolidated Risk Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>IA</fullName>
        <active>true</active>
        <label>IA</label>
    </recordTypes>
    <recordTypes>
        <fullName>SERC</fullName>
        <active>true</active>
        <label>SERC</label>
    </recordTypes>
    <recordTypes>
        <fullName>SOX</fullName>
        <active>true</active>
        <label>SOX</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>